# DPO_2_Project

./: .gitignore  Readme.md  db.sqlite3  docker-compose.yml
.github/workflows/: ci.yml
apartments/: models.py  urls.py
apartments/migrations/: 0001_initial.py
auth_app/: urls.py  views.py
auth_app/migrations/: 0001_initial.py
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/apartments/: admin.py  serializers.py  urls.py  views.py
backend/apartments/migrations/: 0002_initial.py  0003_alter_review_rating.py
backend/auth_app/: managers.py  models.py  serializers.py  views.py
backend/booking_project/: settings.py  urls.py
backend/media/apartments/: photo-1584132967334-10e028bd69f7.avif  photo-1596394516093-501ba68a0ba6.avif
backend/profiles/: serializers.py
backend/profiles/migrations/: 0002_alter_profile_user.py
booking_project/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ApartmentCard.js  CategoriesTabs.js  EmptyState.js  Footer.js  Navbar.js  Reviews.js  ScrollToTopButton.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/pages/: About.js  AddApartment.js  ApartmentCalendar.css  ApartmentDetail.js  Apartments.js  Bookings.js  FAQ.js  Home.js  Login.js  MyBookings.js  Profile.js  Register.js
frontend/src/services/: api.js
frontend/src/utils/: ToastContext.js
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
